Cached loadUserByUsername method for faster user response